[JAVA-5730] java util opened for reflection surefire plugin